--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -20,6 +20,9 @@ jobs:
       - run: npm ci
 
       - run: npm run build
+        env:
+          TURBO_TOKEN: AWLt2yW63yqA4h4ciSFpX28t
+          TURBO_TEAM: victorgcampanella 
 
       - name: Deploy storybook
         working-directory: ./packages/docs
